# openmower-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  console.py  helpers.py  main.py  openmower_commands.py  openmower_common_commands.py  openmower_legacy_commands.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/openmower_cli/: __init__.py  __main__.py  console.py  constants.py  helpers.py  openmower_commands.py  openmower_common_commands.py  openmower_legacy_commands.py
